Bug 93208 - Message mimeparts downloaded more than once (actually 28 times) ported by antonio.xu@sun.com, a=jdunn@netscape.com